Fixed dates being too close together

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -21,4 +21,8 @@ code {
   font-size: 1rem; /* Increase font size */
 }
 
+.p-datepicker-title .p-datepicker-month {
+  margin-right: 4px;
+}
+
 
